--- a/build.gradle
+++ b/build.gradle
@@ -42,12 +42,12 @@ dependencies {
 jar {
     manifest {
         attributes([
-                "Specification-Title"     : "EasyTech",
-                "Specification-Vendor"    : "EasyTechSareus",
+                "Specification-Title"     : "EasyCraft",
+                "Specification-Vendor"    : "EasyCraftSareus",
                 "Specification-Version"   : "1", // We are version 1 of ourselves
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : "${version}",
-                "Implementation-Vendor"   : "EasyTechSareus",
+                "Implementation-Vendor"   : "EasyCraftSareus",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
